height issue on mobile

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -19,6 +19,12 @@ body {
   margin: 0;
 }
 
+@media screen and (min-width: _breakpoint(step-one)) {
+  body {
+    height: 100%;
+  }
+}
+
 header {
   padding: 1rem;
   height: 2rem;
